# RepoTri3

./: .breakpoints  LICENSE  README.md  _config.yml  fibonacci.py  index.md  main.py  navbar.html  notes.md  pyproject.toml  swap.py
_includes/: navbar.html  replit.html
challenges/: tree.py
forgitpages/: README.md  cretask.md  datastruct.md  notes.md  tests.md
notes/: notes5_12.md  notes5_34.md  notes5_56.md
week0/: animate.py  matrix.py
week1/: datalists.py  fibonacci.py
week2/: factorial.py  palindrome.py
week3/: numberguess.py
