[tool.poetry]
name = "repl_python3_RepoTri3"
version = "0.1.0"
description = ""
authors = ["PaulDiPasquale <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
listy = "^1.0.0"
mathpy = "^0.3.0"
patterns = "^0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
